Adding Codecov to test actions

--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -1,6 +1,6 @@
-name: Oni Calculator Demo Teting
+name: Oni Calculator Demo Testing
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   test-and-lint:
@@ -17,6 +17,8 @@ jobs:
     - name: Run tests
       run: |
         npm test
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
     - name: Run linters
       run: |
         npx eslint src/**
